# cookiecutter-python-agari

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.app_name}}.py
