[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = []
packages = [
    { include = "{{cookiecutter.app_name}}", from = "src" }
]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.11.1"
mypy = "^0.812"
flake8 = "^3.9.0"
black = "^20.8b1"
ipykernel = "^5.5.3"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
(
    .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
    | dist
)
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
